[package]
name = "rustc-demangle"
version = "0.1.7"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/alexcrichton/rustc-demangle"
homepage = "https://github.com/alexcrichton/rustc-demangle"
documentation = "http://alexcrichton.com/rustc-demangle"
description = """
Rust compiler symbol demangling.
"""

[workspace]
members = ["rustc-demangle-capi"]

[profile.release]
lto = true
codegen-units = 1
incremental = false
