[package]
name = "rustc-demangle"
version = "0.1.9"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/alexcrichton/rustc-demangle"
homepage = "https://github.com/alexcrichton/rustc-demangle"
documentation = "https://docs.rs/rustc-demangle"
description = """
Rust compiler symbol demangling.
"""
